# fund_algs

./: .gitignore  CMakeLists.txt
lab_1/: task_1.c  task_10.c  task_2.c  task_3.c  task_4.c  task_5.c  task_6.c  task_7.c  task_8.c  task_9.c
lab_2/: l2_draft_6.c  l2_draft_9.c  l2_task_1.c  l2_task_2.c  l2_task_3.c  l2_task_4.c  l2_task_5.c  l2_task_6.c  l2_task_7.c  l2_task_8.c  l2_task_9.c
lab_3/: README.txt  README_l3_task_5.txt  l3_task_1.c  l3_task_3.c  l3_task_5.c  l3_task_7.c
lab_4/: l4_task_4.c
