cmake_minimum_required(VERSION 3.23)
project(fund_algs C)

set(CMAKE_C_STANDARD 11)

add_executable(task_1
        lab_1/task_1.c)
add_executable(task_7
        lab_1/task_7.c)
add_executable(task_2
        lab_1/task_2.c)
add_executable(task_4
        lab_1/task_4.c)
add_executable(task_5
        lab_1/task_5.c)
add_executable(task_3
        lab_1/task_3.c)
add_executable(task_8
        lab_1/task_8.c)
add_executable(l2_task_1
        lab_2/l2_task_1.c)
add_executable(l2_task_2
        lab_2/l2_task_2.c)
add_executable(l2_task_4
        lab_2/l2_task_4.c)